src/objects/SomTv_Agentursplit__c.object
<CustomObject>
    <fields>
        <fullName>Agenturverbund__c</fullName>
        <formula>SomTv_Agentur__r.Parent.Name</formula>
        <label>Agenturverbund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Agentur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Für Agentursplit verantwortliche Agentur.</inlineHelpText>
        <label>Agentur</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agentursplit</relationshipLabel>
        <relationshipName>Agentursplit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1_Anteil__c</fullName>
        <description>MB1 Anteil in EUR</description>
        <formula>SomTv_Opportunity__r.Amount * SomTv_Prozent_Anteil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1 Anteil in EUR</inlineHelpText>
        <label>MB1 Anteil</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3_Anteil__c</fullName>
        <formula>SomTv_MN3_Opps__c  *  SomTv_Prozent_Anteil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 Anteil</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3_Opps__c</fullName>
        <formula>SomTv_Opportunity__r.SomTv_MN3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3__c</fullName>
        <inlineHelpText>Bitte geben Sie den MedioNetto 3 NUR mit dieser Agentur (Agentursplit) ein.</inlineHelpText>
        <label>MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Der Agentursplit bezieht sich auf folgende Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Agentursplit</relationshipLabel>
        <relationshipName>Agentursplit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Prozent_Anteil__c</fullName>
        <description>Definiert den Anteil einer Agentur an Gesamt MN3</description>
        <inlineHelpText>Definiert den Anteil einer Agentur an Gesamt MN3</inlineHelpText>
        <label>%-Anteil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Agentursplit</label>
    <nameField>
        <displayFormat>SP-{0000000}</displayFormat>
        <label>Agentursplit-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agentursplit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ProzentuallerAnteilKleinergleich100</fullName>
        <active>true</active>
        <description>Der Anteil eines Splits muss kleiner gleich 100% sein.</description>
        <errorConditionFormula>SomTv_Prozent_Anteil__c &gt; 1</errorConditionFormula>
        <errorDisplayField>SomTv_Prozent_Anteil__c</errorDisplayField>
        <errorMessage>Bitte geben Sie einen Prozentsatz kleiner 100 ein.</errorMessage>
    </validationRules>
</CustomObject>